--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -164,7 +164,7 @@
             <section id="experiencia" class="container">
                 <div class="row">
                     <div class="col-12 pt-5 pb-4">
-                        <h2><i class="fas fa-briefcase"></i> Experiencia laboral</h2>
+                        <h2  class="t-h2"><i class="fas fa-briefcase"></i> Experiencia laboral</h2>
                     </div>
                 </div>
                 <div class="row shadow bg-white rounded">
@@ -177,10 +177,10 @@
                                     class="img-holding" title="holding">
                             </div>
                             <div class="col-12- col-sm-10 p-3 ">
-                                <h3>seguridad privada</h3>
-                                <h2>holding de seguridad</h2>
+                                <h3>Seguridad Privada</h3>
+                                <h2  class="t-h2">Holding de Seguridad</h2>
                                 <h5> 12/08/21 - Presente</h5>
-                                <p>un hombre lleno de valores y aptitudes que lo destacan como ser humano, un guarda de
+                                <p>Un hombre lleno de valores y aptitudes que lo destacan como ser humano, un guarda de
                                     seguridad trae desde el seno de su hogar los modales, la capacidad de servir y
                                     proteger la vida de las personas.
 
@@ -196,8 +196,8 @@
                                     class="img-sai" title="sai">
                             </div>
                             <div class="col-12- col-sm-10 px-2">
-                                <h3>operador terreztre</h3>
-                                <h2>SAI S.A</h2>
+                                <h3>Operador Terreztre</h3>
+                                <h2 class="t-h2">SAI S.A</h2>
                                 <h5>23/05/2019 - 10/07/2021 </h5>
                                 <p>Señalizacion para parquear aeronaves, señalizacion de acoplamiento de vehiculos a la
                                     aeronave, cargar y descargar aeronaves, lectura a equipajes y mercacias.</p>
