--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 </div>
                 <div class="container">
                     <div class="row">
-                         <div class="p-1 text-center  mt-5 pt-5">
-                            <p>Bienvenid@ a mi sitio web sobre docencia en sistemas.</p>
+                         <div class=" text-center  mt-5 pt-5">
+                            <p><hr id="linea1">Bienvenid@ a mi sitio web sobre docencia en sistemas.</p>
                         </div>
                     </div>
                 </div>
