--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -55,9 +55,9 @@
 
                     </div>
                     <div class="col-sm-3 col-12 mt-4 offset-sm-2">
-                        <div class="perfil img-circle">
+                        <div class="imgRedonda">
                             <img src="../porfolio/imagenes/perfil.jfif" alt="nicolas" title="nicolas"
-                            class="img-fluid img-circle">
+                            class="imgRedonda">
                         </div>
                     </div>
                 </div>
