--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -208,7 +208,7 @@
             <section id="formacion" class="container">
                 <div class="row">
                     <div class="col-12 pt-5 pb-4">
-                        <h2><i class="fas fa-graduation-cap"></i> Formación acádémica</h2>
+                        <h2 class="formacion"><i class="fas fa-graduation-cap"></i> Formación acádémica</h2>
                     </div>
                 </div>
                 <div class="row shadow bg-white rounded p-1">
@@ -221,7 +221,7 @@
                             </div>
                             <div class="col-12- col-sm-10 p-3">
                                 <h3>Bachiller Academico</h3>
-                                <h4>INST. Manuel rodriguez torices</h4>
+                                <h4 class="formacion" >INST. Manuel rodriguez torices</h4>
                                 <h5>2006 - 2012</h5>
                                 <p>http://instmaroto.edu.co/</p>
                             </div>
