--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -174,7 +174,7 @@
                         <div class="row">
                             <div class="col-2 p-5 my-auto d-none d-sm-block px-1">
                                 <img src="../porfolio/imagenes/holding.png"
-                                    class="img-holding" title="holding">
+                                class="img-exp" title="holding">
                             </div>
                             <div class="col-12- col-sm-10 p-3 ">
                                 <h3>Seguridad Privada</h3>
@@ -191,9 +191,9 @@
                     </div>
                     <div class="col-12">
                         <div class="row">
-                            <div class="col-2 px-3 my-auto d-none d-sm-block">
+                            <div class=" col-2 px-3 my-auto d-none d-sm-block">
                                 <img src="../porfolio/imagenes/sai.png"
-                                    class="img-sai" title="sai">
+                                    class="img-exp" title="sai">
                             </div>
                             <div class="col-12- col-sm-10 px-2">
                                 <h3>Operador Terreztre</h3>
